--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   background: #f5f5f5;
   color: #111111;
   min-width: 230px;
-  max-width: 550px;
+  max-width: 800px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -415,4 +415,17 @@ html .clear-completed:active {
 .done {
   text-decoration: line-through;
   opacity: 0.5;
+}
+
+.timer-block {
+  display: flex;
+  align-items: center;
+}
+
+.icon-play,
+.icon-pause {
+  display: flex;
+  padding: 0 10px;
+  display: block;
+  cursor: pointer;
 }
